--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,10 @@
   background-color: #000 !important;
   color: #fff !important;
 }
+
+.bg-repeating-lines-dark {
+  background-image: linear-gradient(
+    transparent calc(100% - 1px),
+    rgba(0, 0, 0, 0.3)
+  );
+}
